2006-04-12  Derek Price  <derek@ximbiot.com>

	* lock.c: #include "repos.h" for proto.

2006-03-24  Derek Price  <derek@ximbiot.com>

	* verify.c: #include <getopt.h>.
	(verify_usage): Correct usage.
	(verify): Use declared int type for getopt return - char may be
	unsigned on some systems.

2006-03-13  Derek Price  <derek@ximbiot.com>

	Handle OpenPGP version 4 signatures.
	* gpg.c (struct openpgp_signature_subpacket): New struct.
	(parse_signature_subpacket): New function.
	(parse_signature): Process version 4 signatures.

2006-01-27  Derek Price  <derek@ximbiot.com>

	* verify.c: #include "wait.h" from GNULIB.

2006-01-26  Derek Price  <derek@ximbiot.com>

	* verify.c: s/VERIFY_NEVER/VERIFY_OFF/.

2006-01-20  Derek Price  <derek@ximbiot.com>

	* diff.h: New file.

	* base.c (base_diff): Handle client/server mode.
	* client.c (base_copy): Expand header comment.
	(client_base_diff, handle_base_diff): New function.
	(responses): Add Base-diff.
	* diff.c (diff_mark_errors): Export.
	(empty_files): s/int/bool/.
	(diff_fileproc): Reduce verbosity.  Avoid passing `-' as part of a
	revision number.  Pass time stamp to make_file_label when available.
	(get_diff_info): New function.
	* entries.c: Add traces.
	* rcs.c (make_file_label), rcs.h: Accept time stamp as an argument.
	* server.c (requests): Add Base-diff.
	(iserver_base_checkout): Always send temp files.
	(server_base_diff): Add new function.
	* server.h (server_base_diff): New proto.
	* vers_ts.c (time_stamp_server): Use a time stamp that won't match
	ts_rcs when the server is running without file contents.

	* sanity.sh: Update to compensate.
	
2006-01-19  Derek Price  <derek@ximbiot.com>

	* diff.c (have_rev1_label, have_rev2_label): Make boolean.
	(diff_file_nodiff): Accept a tag for Name keywords.
	(diff_fileproc): Factor some functionality to...
	* base.c (base_diff), base.h: ...this new function.
	
	* rcs.c (RCS_cmp_file), rcs.h: Accept a tag for Name keywords. 