@@ -1,3 +1,8 @@
+2006-04-13  Derek Price  <derek@ximbiot.com>
+
+	* diff.c (diff_fileproc): Correct for Version_TS error when calling
+	make_file_label.
+
 2006-04-12  Derek Price  <derek@ximbiot.com>
 
 	* lock.c: #include "repos.h" for proto.
